# rockwalk

./: EventsFcn.m  MainCode.m  README.md  SteadyStateFunction.m  dynamiceqpar.m  fun_coorG.m  integral_curves_concatenate.m  vector_fields.m
devel/: .catkin  (+5 more)
src/ur10_cm/: CMakeLists.txt  README.md
src/ur10_cm/config/: hong_dual_arm_controllers.yaml  kong_dual_arm_controllers.yaml
src/ur10_cm/launch/: dual_arm_execution.launch  dual_arm_gazebo.launch  dual_arm_hong_kong_gazebo_upload.launch  dual_arm_hong_kong_upload.launch  dual_arm_ros_control_execution.launch  dual_arm_ros_control_gazebo.launch  model_display.launch
src/ur10_cm/matlab_scripts/: integral_curves_concatenate.m  lr_rocking.mat  params.mat  vector_field_neg.mat  vector_field_pos.mat
src/ur10_cm/models/: Eff_Torus_DAE.dae  cone_stl.STL  dual_arm_hong_kong_gazebo_joint_limited.urdf.xacro  dual_arm_hong_kong_joint_limited.urdf.xacro  manipuland.urdf  manipuland_object.dae
src/ur10_cm/msg/: dual_arm_eff_msg.msg
src/ur10_cm/plotting_data/: period_tilt.py  period_tilt_data.txt  phase_plot.py
src/ur10_cm/ros_nodes/: cone_pose_visualization.py  hongPublishFromText.py  hong_arm_manipulation_test.py  hong_kong_dual_arm_manipulation.py  hong_kong_dual_arm_manipulation_operational.py  hong_target_pose_generator.py  hong_ur10.py  kong_rigid_effector_control.py  kong_target_pose_generator.py  kong_ur10.py  publishFromText.py  publish_joint_states.py  publish_robot_state.py  rock_walk_plots.py
src/ur10_cm/scripts/: base_link_pose.py  broadcast_frame_shield_ref.py  markers.py  read_bag_data.py  unit_quat.py
(+2202 files in other folders)
